<resources>
    <string name="app_name">Friend Register</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_register">Register</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="menu_add_friend">Add Friend</string>
    <string name="name_hint">"Arne"</string>
    <string name="birthday_hint">dd/mm/yyyy</string>
</resources>